# the-little-monsters

./: .gitignore  CMakeLists.txt
headers/: game.h  image.h
sources/: game.c  image.c  main.c
